--- a/instrument_inventory_app/templates/navbar.html
+++ b/instrument_inventory_app/templates/navbar.html
@@ -7,12 +7,12 @@
     <span>{% if request.path == contact_url %}Contact{% else %}<a href="{{ contact_url }}">Contact</a>{% endif %}</span>
     <span style= "float: right">
         {% if user.is_authenticated %}
-            {% url 'accounts:profile' as profile_url %}
+            {% url 'inventory:profile' as profile_url %}
             <span>Hi {% if request.path == profile_url %} {{user.username }}{% else %}<a href="{{ profile_url }}">{{ user.username }}</a></span>
-            <span><a href="{% url 'accounts:logout' %}">Logout</a></span>
+            <span><a href="{% url 'inventory:logout' %}">Logout</a></span>
                      {% endif %}
         {% else %}
-            <span><a href="{% url 'accounts:login' %}">Login</a></span>
+            <span><a href="{% url 'inventory:login' %}">Login</a></span>
             {% endif %}
     </span>
 
