--- a/instrument_inventory_app/templates/navbar.html
+++ b/instrument_inventory_app/templates/navbar.html
@@ -1,19 +1,43 @@
-<div>
-    {% url 'public:index' as index_url %}
-    <span>{% if request.path == index_url %}Home{% else %}<a href="{{ index_url }}">Home</a>{% endif %}</span>
-    {% url 'public:about' as about_url %}
-    <span>{% if request.path == about_url %}About{% else %}<a href="{{ about_url }}">About</a>{% endif %}</span>
-    {% url 'public:contact' as contact_url %}
-    <span>{% if request.path == contact_url %}Contact{% else %}<a href="{{ contact_url }}">Contact</a>{% endif %}</span>
-    <span style= "float: right">
-        {% if user.is_authenticated %}
-            {% url 'inventory:profile' as profile_url %}
-            <span>Hi {% if request.path == profile_url %} {{user.username }}{% else %}<a href="{{ profile_url }}">{{ user.username }}</a></span>
-            <span><a href="{% url 'inventory:logout' %}">Logout</a></span>
-                     {% endif %}
-        {% else %}
-            <span><a href="{% url 'inventory:login' %}">Login</a></span>
-            {% endif %}
-    </span>
 
-</div>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        {% url 'inventory:index' as index_url %}
+        <li class="nav-item active">
+            <a class="nav-link">{% if request.path == index_url %}Inventory</a>{% else %}<a class="nav-link" href="{{ index_url }}">Inventory</a>{% endif %}</a>
+        </li>
+
+        <li class="nav-item">
+            {% url 'inventory:add_instrument' as add_instrument_url %}
+            <a class="nav-link">{% if request.path == add_instrument_url %}Add New Instrument</a>{% else %}<a class="nav-link" href="{{ add_instrument_url }}">Add New Instrument</a>{% endif %}</a>
+        </li>
+        {% url 'inventory:contact' as contact_url %}
+        <li class="nav-item">
+
+            <a class="nav-link">{% if request.path == contact_url %}Contact</a>{% else %}<a class="nav-link" href="{{ contact_url }}">Contact</a>{% endif %}</a>
+        </li>
+
+        {% if user.is_authenticated %}
+
+        <li class="nav-item">
+            {% url 'inventory:profile' as profile_url %}
+            <a class="nav-link" >{% if request.path == profile_url %} {{user.username }}</a>{% else %}<a class="nav-link" href="{{ profile_url }}">{{ user.username }}</a>
+        </li>
+        <div class="float-lg-right">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'inventory:logout' %}">Logout</a>
+        </li>
+        {% endif %}
+
+        {% else %}
+
+            <li class="nav-item">
+               <a class="nav-link" href="{% url 'inventory:login' %}">Login</a>
+           </li>
+       </div>
+       {% endif %}
+   </li>
+</ul>
+</nav>
+
+
+
