add working form control widget with ModelForm

--- a/instrument_inventory_app/templates/inventory/profile.html
+++ b/instrument_inventory_app/templates/inventory/profile.html
@@ -3,10 +3,10 @@
 {% block title %}Profile{% endblock %}
 
 {% block content %}
-<h1>
+<center><h1>
     {{ user.username.capitalize }}'s profile
 </h1>
-<div>{{instrument}}</div>
 
 
+</center>
 {% endblock %}
