--- a/instrument_inventory_app/templates/navbar.html
+++ b/instrument_inventory_app/templates/navbar.html
@@ -2,38 +2,39 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         {% url 'inventory:index' as index_url %}
-        <li class="nav-item active">
+        <li  {% if request.path == index_url %} class="nav-item active" {% else %}class="nav-item" {%endif%} >
             <a class="nav-link">{% if request.path == index_url %}Inventory</a>{% else %}<a class="nav-link" href="{{ index_url }}">Inventory</a>{% endif %}</a>
         </li>
+        {% url 'inventory:add_instrument' as add_instrument_url %}
+        <li {% if request.path == add_instrument_url %} class="nav-item active" {% else %}class="nav-item" {%endif%}>
 
-        <li class="nav-item">
-            {% url 'inventory:add_instrument' as add_instrument_url %}
             <a class="nav-link">{% if request.path == add_instrument_url %}Add New Instrument</a>{% else %}<a class="nav-link" href="{{ add_instrument_url }}">Add New Instrument</a>{% endif %}</a>
+
         </li>
         {% url 'inventory:contact' as contact_url %}
-        <li class="nav-item">
+        <li {% if request.path == contact_url %} class="nav-item active" {% else %}class="nav-item" {%endif%}>
 
             <a class="nav-link">{% if request.path == contact_url %}Contact</a>{% else %}<a class="nav-link" href="{{ contact_url }}">Contact</a>{% endif %}</a>
         </li>
 
         {% if user.is_authenticated %}
+        {% url 'inventory:profile' as profile_url %}
+        <li {% if request.path == profile_url %} class="nav-item active" {% else %}class="nav-item" {%endif%}>
 
-        <li class="nav-item">
-            {% url 'inventory:profile' as profile_url %}
             <a class="nav-link" >{% if request.path == profile_url %} {{user.username }}</a>{% else %}<a class="nav-link" href="{{ profile_url }}">{{ user.username }}</a>
         </li>
-        <div class="float-lg-right">
-        <li class="nav-item">
+
+        <li class="nav-item" >
             <a class="nav-link" href="{% url 'inventory:logout' %}">Logout</a>
         </li>
         {% endif %}
 
         {% else %}
 
-            <li class="nav-item">
-               <a class="nav-link" href="{% url 'inventory:login' %}">Login</a>
-           </li>
-       </div>
+        <li class="nav-item" >
+           <a class="nav-link" href="{% url 'inventory:login' %}">Login</a>
+       </li>
+
        {% endif %}
    </li>
 </ul>
