implement updated - no auth yet

--- a/instrument_inventory_app/templates/instruments/update_instrument.html
+++ b/instrument_inventory_app/templates/instruments/update_instrument.html
@@ -5,18 +5,18 @@
 {% block content %}
 
 
-<h1>{{instrument.student}}'s {{instrument.instrument_kind}}</h1>
+<h1>{{instrument.student}}'s {{instrument.instrument_kin}}</h1>
 
 <br/><br/>
 
-{% if submitted %}
+{% if updated %}
 
-Successfully Submitted!
+Successfully updated!
 
 
 {% else %}
 
-<form method='' >
+<form method='POST' >
     {% csrf_token %}
 
     <div class="container-fluid"  width=50% height=75%>
