--- a/instrument_inventory_app/templates/instruments/add_instrument.html
+++ b/instrument_inventory_app/templates/instruments/add_instrument.html
@@ -42,6 +42,12 @@ Successfully Submitted!
                         <label><b>Serial Number:</b></label>
                         {{form.serial_number}}
                     </div>
+
+                    <br>
+                    <div >
+                        <label><b>Instruments Condition:</b></label>
+                        {{form.condition}}
+                    </div>
                     <br>
                     <div>
                         <label><b>Assign to Student:</b></label>
@@ -109,8 +115,8 @@ Successfully Submitted!
             <br> <br><br> <br><br> <br>
             <!-- <input type="cancel" value="cancel" class= "btn btn-outline-danger"></input> -->
 
-            <input type="submit" value="Submit" class= "btn btn-outline-primary"></input>
-<br> <br><br> <br><br> <br>
+            <input type="submit" value="Create" class= "btn btn-outline-primary"></input>
+            <br> <br><br> <br><br> <br>
         </div>
     </div>
 </form>
