--- a/instrument_inventory_app/templates/inventory/profile.html
+++ b/instrument_inventory_app/templates/inventory/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Profile{% endblock %}
+{% block title %}Metrics{% endblock %}
 
 {% block content %}
 <center><h1>
