--- a/instrument_inventory_app/templates/inventory/metrics.html
+++ b/instrument_inventory_app/templates/inventory/metrics.html
@@ -3,16 +3,18 @@
 {% block title %}Metrics{% endblock %}
 
 {% block content %}
-<center><h1>
-    {{ user.username.capitalize }}'s profile
+<h1>
+    {{ user.username.capitalize }} Metrics
 </h1>
 
 <div>
-{{instruments}}
+{%for instrument in instruments%}
+{{instrument.reeds_accessory}}
+{%endfor%}
 </div>
 
 
 
 
-</center>
+
 {% endblock %}
