--- a/instrument_inventory_app/templates/navbar.html
+++ b/instrument_inventory_app/templates/navbar.html
@@ -1,43 +1,54 @@
-<nav class="navbar navbar-collapse navbar-expand-lg bg-dark navbar-dark">
+<div class="navbar-brand-sm" >Orchard Gardens' Instrument Inventory</div>
+<nav class="navbar navbar-collapse navbar-expand-lg bg-dark navbar-dark justify-content-end">
+
     <ul class="navbar-nav ">
+      {% if user.is_authenticated %}
+      {% url 'inventory:metrics' as metrics_url %}
+      {% url 'inventory:contact' as contact_url %}
+      {% url 'inventory:add_instrument' as add_instrument_url %}
+      {% url 'inventory:index' as index_url %}
+      <li  {% if request.path == index_url %} class="nav-item active" {% else %}class="nav-item" {%endif%} >
+        <a class="nav-link">{% if request.path == index_url %}Inventory</a>{% else %}<a class="nav-link" href="{{ index_url }}">Inventory</a>{% endif %}</a>
+    </li>
 
-        {% url 'inventory:index' as index_url %}
-        <li  {% if request.path == index_url %} class="nav-item active" {% else %}class="nav-item" {%endif%} >
-            <a class="nav-link">{% if request.path == index_url %}Inventory</a>{% else %}<a class="nav-link" href="{{ index_url }}">Inventory</a>{% endif %}</a>
-        </li>
-        {% url 'inventory:add_instrument' as add_instrument_url %}
-        <li {% if request.path == add_instrument_url %} class="nav-item active " {% else %}class="nav-item" {%endif%}>
+    <li {% if request.path == add_instrument_url %} class="nav-item active " {% else %}class="nav-item" {%endif%}>
 
-            <a class="nav-link ">{% if request.path == add_instrument_url %}Add New Instrument</a>{% else %}<a class="nav-link" href="{{ add_instrument_url }}">Add New Instrument</a>{% endif %}</a>
+        <a class="nav-link ">{% if request.path == add_instrument_url %}Add New Instrument</a>{% else %}<a class="nav-link" href="{{ add_instrument_url }}">Add New Instrument</a>{% endif %}</a>
 
-        </li>
+    </li>
 
-        {% if user.is_authenticated %}
-        {% url 'inventory:profile' as profile_url %}
-        <li {% if request.path == profile_url %} class="nav-item active" {% else %}class="nav-item" {%endif%}>
+    <li {% if request.path == metrics_url %} class="nav-item active" {% else %}class="nav-item" {%endif%}>
 
-            <a class="nav-link" >{% if request.path == profile_url %}Metrics</a>{% else %}<a class="nav-link" href="{{ profile_url }}">Metrics</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'inventory:logout' %}">Logout</a>
-        </li>
-        {% endif %}
+        <a class="nav-link" >{% if request.path == metrics_url %}Metrics</a>{% else %}<a class="nav-link" href="{{ metrics_url }}">Metrics</a>{% endif %}
+    </li>
 
-        {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'inventory:login' %}">Login</a>
-        </li>
-    </ul>
-  {% endif %}
+
+    <li {% if request.path == admin_url %} class="nav-item active" {% else %}class="nav-item" {%endif%}>
+
+        <a class="nav-link">{% if request.path == admin_url %}Admin Dashboard</a>{% else %}<a class="nav-link" href="{{ 'admin' }}">Admin Dasboard</a>{% endif %}</a>
+    </li>
+
+
+    <li class="nav-item">
+        <a class="nav-link " ' href="{% url 'inventory:logout' %}">Logout</a>
+    </li>
+
+    {% else %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'inventory:login' %}">Login</a>
+    </li>
+</ul>
+{% endif %}
 
 </nav>
 
 
 
 
+<!--
+    {% url 'inventory:contact' as contact_url %}
+    <li {% if request.path == admin_url %} class="nav-item active" {% else %}class="nav-item" {%endif%}>
 
- <!--  {% url 'inventory:contact' as contact_url %}
-        <li {% if request.path == contact_url %} class="nav-item active" {% else %}class="nav-item" {%endif%}>
-
-            <a class="nav-link">{% if request.path == contact_url %}Contact</a>{% else %}<a class="nav-link" href="{{ contact_url }}">Contact</a>{% endif %}</a>
-        </li> -->
+        <a class="nav-link">{% if request.path == contact_url %}Contact</a>{% else %}<a class="nav-link" href="{{ contact_url }}">Contact</a>{% endif %}</a>
+    </li>
+-->
