--- a/instrument_inventory_app/templates/inventory/login.html
+++ b/instrument_inventory_app/templates/inventory/login.html
@@ -3,14 +3,17 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
-<h1>
-    Login
-</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
 
-</form>
+  <div>
+    <h1>
+        Login
+    </h1 >
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class='btn btn-outline-primary' type="submit">Login</button>
+    </form>
+</div>
+
 
 {% endblock %}
