--- a/instrument_inventory_app/templates/metrics.html
+++ b/instrument_inventory_app/templates/metrics.html
@@ -6,13 +6,83 @@
 <h1>
     Metrics
 </h1>
+<div class='container-fluid'>
+    <div class='row'>
+        <div class='col-4'>
+            <h5>Woodwind Parts</h5>
+            <div>
+                Total Reeds: {{reeds_only}} out of 50
+            </div>
+            <div>
+                Total Ligatures: {{ligatures_only}} out of 50
+            </div>
+            <div>
+                Total Woodwind Mouth Pieces: {{woodwind_mouth_piece_accessory_only}} out of 50
+            </div>
+            <br>
 
-<div>
-Total Reeds: {{reeds}} out of 50
+            <h5>Instrument Books</h5>
+            <div>
+                Total Trumpet Books: {{trumpet_books_only}} out of 50
+            </div>
+            <div>
+                Total Clarinet Books: {{clarinet_books_only}} out of 50
+            </div>
+            <div>
+                Total Alto Sax Books: {{alto_sax_books_only}} out of 50
+            </div>
+            <div>
+                Total Bassoon Books: {{bassoon_books_only}} out of 50
+            </div>
+
+            <div>
+                Total Flute Books: {{flute_books_only}} out of 50
+            </div>
+            <div>
+                Total Oboe Books: {{oboe_books_only}} out of 50
+            </div>
+            <div>
+                Total Bass Clarinet Books: {{bass_clarinet_books_only}} out of 50
+            </div>
+            <div>
+                Total Tenor Sax Books: {{tenor_sax_books_only}} out of 50
+            </div>
+            <div>
+                Total French Horn Books: {{french_horn_sax_books_only}} out of 50
+            </div>
+
+            <div>
+                Total Trombone Books: {{trombone_books_only}} out of 50
+            </div>
+            <div>
+                Total Baritone Horn Books: {{baritone_horn_books_only}} out of 50
+            </div>
+            <div>
+                Total Bass Guitar Books: {{bass_guitar_books_only}} out of 50
+            </div>
+        </div>
+    </div>
 </div>
+<br>
+<div class='container-fluid'>
+    <div class='row'>
+        <div class='col-4'>
+            <h5>Brass Mouth Pieces</h5>
+         <div>
+            Total Trumpet Mouth Pieces: {{trumpet_mouth_piece_accessory_only}} out of 50
+        </div>
+        <div>
+            Total Trombone Mouth Pieces: {{trombone_mouth_piece_accessory_only}} out of 50
+        </div>
+        <div>
+            Total French Horn Mouth Pieces: {{french_horn_mouth_piece_accessory_only}} out of 50
+        </div>
+         <div>
+            Total Baritone Horn Mouth Pieces: {{baritone_horn_mouth_piece_accessory_only}} out of 50
+        </div>
 
-
-
-
+    </div>
+</div>
+</div>
 
 {% endblock %}
