add brass queries

--- a/instrument_inventory_app/templates/base.html
+++ b/instrument_inventory_app/templates/base.html
@@ -23,5 +23,11 @@
         </div>
     </main>
 </body>
+
+<br><br><br>
+<center>
+<footer>- Music is an expression of your existence -</footer>
+</center>
+<br><br><br>
 </html>
 
