--- a/instrument_inventory_app/templates/update_instrument.html
+++ b/instrument_inventory_app/templates/update_instrument.html
@@ -98,7 +98,7 @@
             </div>
             <br>
             <div class="form-check">
-                <label>Polshing Cloth</label>
+                <label>Polishing Cloth</label>
                 {{form.polishing_cloth_accessory}}
             </div>
         </div>
