--- a/instrument_inventory_app/templates/inventory/login.html
+++ b/instrument_inventory_app/templates/inventory/login.html
@@ -3,17 +3,15 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
-
-  <div>
-    <h1>
-        Login
-    </h1 >
+<br><br><br><br><br><br>
+<center>
+  <div class='col-3'>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button class='btn btn-outline-primary' type="submit">Login</button>
     </form>
 </div>
-
+</center>
 
 {% endblock %}
